# novelforge

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: chapter.py  debate_log.py  story.py  user.py
backend/app/routers/: admin.py  auth.py  chapter.py  export.py  story.py
backend/app/schemas/: admin.py  auth.py  chapter.py  story.py
backend/app/services/: auth_service.py  debate_engine.py  export_service.py  story_service.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/new/: page.tsx
frontend/src/app/dashboard/story/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  types.ts
